fix(style): adding transform-origin to fix enlarged images from being cut off off-screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -503,6 +503,11 @@ h1 {
 	margin: auto;
 }
 
+/*Image transform from the left*/
+.img_scale:active img, .img_scale:focus img {
+	transform-origin: center left;
+}
+
 /*Styling for code blocks*/
 .code {
 	word-wrap: break-word;
